CMAKE_MINIMUM_REQUIRED(VERSION 3.1)
PROJECT(Cpp11 CXX)

# -- C++11
SET(CMAKE_CXX_STANDARD 11) # newer way to set C++11 (requires cmake>=3.1)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)

FILE(GLOB SRCS *.h *.cpp *.inl *.hpp)
ADD_EXECUTABLE(cpp11 ${SRCS})

ENABLE_TESTING()
ADD_TEST(NAME cpp11 COMMAND ${EXECUTABLE_OUTPUT_PATH}/cpp11
         WORKING_DIRECTORY ${PROJECT_BINARY_DIR})
