CMAKE_MINIMUM_REQUIRED(VERSION 3.1)
#PROJECT(FTN_BLAS Fortran)   # <= FIND_PACKAGE(BLAS) ne trouve rien!
PROJECT(FTN_BLAS C Fortran) # <= FIND_PACKAGE(BLAS) OK
#PROJECT(FTN_BLAS)
#ENABLE_LANGUAGE(Fortran)   # <= FIND_PACKAGE(BLAS) OK

#SET(CMAKE_VERBOSE_MAKEFILE TRUE) # affiche les lignes de commande

# configure Fortran compiler
GET_FILENAME_COMPONENT(Fortran_COMPILER_NAME ${CMAKE_Fortran_COMPILER} NAME)

IF(Fortran_COMPILER_NAME MATCHES "f95")
    SET(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -Wall") 
ENDIF()

MESSAGE(STATUS "Fortran_COMPILER_NAME        : " ${Fortran_COMPILER_NAME})
MESSAGE(STATUS "CMAKE_Fortran_FLAGS          : " ${CMAKE_Fortran_FLAGS})
MESSAGE(STATUS "CMAKE_Fortran_FLAGS_RELEASE  : " ${CMAKE_Fortran_FLAGS_RELEASE})
MESSAGE(STATUS "CMAKE_Fortran_FLAGS_DEBUG    : " ${CMAKE_Fortran_FLAGS_DEBUG})

FIND_PACKAGE(BLAS REQUIRED) # <= semble pas marcher sous windows si PROJECT(XXX Fortran) sans C ni CXX
MESSAGE("BLAS_LIBRARIES=${BLAS_LIBRARIES}")
#FIND_PACKAGE(LAPACK REQUIRED)
#MESSAGE("LAPACK_LIBRARIES=${LAPACK_LIBRARIES}")

ADD_EXECUTABLE(test_scopy test_scopy.f90) # .f90/.f95 => free format | .f/.for => fixed
TARGET_LINK_LIBRARIES( test_scopy ${BLAS_LIBRARIES} )

ENABLE_TESTING()
ADD_TEST(NAME test_scopy COMMAND ${EXECUTABLE_OUTPUT_PATH}/test_scopy
        WORKING_DIRECTORY ${PROJECT_BINARY_DIR})

