CMAKE_MINIMUM_REQUIRED(VERSION 3.1)
PROJECT(JSON CXX)

FILE(GLOB SRCS *.h *.cpp)
ADD_EXECUTABLE(json ${SRCS})

# RapidJSON include dir
FIND_PATH(RAPIDJSON_INCLUDE_DIRS NAMES "rapidjson/rapidjson.h")
MESSAGE(STATUS "RAPIDJSON_INCLUDE_DIRS=" ${RAPIDJSON_INCLUDE_DIRS})
IF(NOT RAPIDJSON_INCLUDE_DIRS)
    MESSAGE(FATAL_ERROR "RapidJSON include dir not found!")
ENDIF()
INCLUDE_DIRECTORIES(${RAPIDJSON_INCLUDE_DIRS})

ENABLE_TESTING()
ADD_TEST(NAME json COMMAND ${EXECUTABLE_OUTPUT_PATH}/json ${PROJECT_SOURCE_DIR}/test1.json
         WORKING_DIRECTORY ${PROJECT_BINARY_DIR})